# Xampp-Utility

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  config.json  index.html  package-lock.json  package.json  run_output.txt  vite.config.ts  xampp_utility.ps1
src/: App.svelte  app.rs  main.rs  main.ts  ui.rs
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/tasks/: backup.rs  discovery.rs  install.rs  mod.rs  restore.rs
src/tasks/: backup.rs  discovery.rs  install.rs  restore.rs
