[package]
name = "xampp-utility"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
fs_extra = "1.3.0"
futures-util = "0.3.32"
ratatui = { version = "0.30.0", features = ["crossterm"] }
reqwest = { version = "0.13.2", features = ["stream", "rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
zip = "8.4.0"
