[package]
name = "xampp-utility"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
anyhow = "1.0.102"
chrono = "0.4.44"
fs_extra = "1.3.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream", "rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
zip = "8.4.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
